versioned_docs/version-1.0.0/cli/command-reference.mdx
---
sidebar_position: 2
title: Command Reference
---

# Command Reference

This page provides a reference for the main commands available through the CradleXC `cxc` command-line interface.

For the command list available in your installed version, run:

```bash
cxc --help
```

For command-specific options, use:

```bash
cxc <command> --help
```

For example:

```bash
cxc compile --help
```

:::note
Command options can change between CradleXC releases. Use the built-in `--help` output when you need the exact options supported by the installed version.
:::

## Command summary

| Command | Purpose |
| --- | --- |
| `cxc validate` | Validate CRADLE source syntax. |
| `cxc compile` | Compile CRADLE source into structured YAML. |
| `cxc dump-ir` | Display CradleXC's intermediate representation. |
| `cxc build` | Generate target-specific files through a backend plugin. |
| `cxc rebuild` | Compare a scenario with the previous build and regenerate its complete file set. |
| `cxc backend list` | List backend plugins discovered by CradleXC. |
| `cxc plugin install` | Install a backend plugin. |
| `cxc doctor` | Check dependencies and environment readiness. |
| `cxc install-deps` | Display dependency installation guidance. |
| `cxc config` | Inspect the current CradleXC configuration. |

## `cxc validate`

Validates the syntax of a CRADLE scenario.

### Usage

```bash
cxc validate -i <scenario.cradle>
```

### Example

```bash
cxc validate -i scenarios/HelloWorld.cradle
```

Use this command before compilation to identify syntax problems in the source scenario.

For more information, see [Validate and Compile](../getting-started/validate-and-compile).

---

## `cxc compile`

Compiles a CRADLE scenario into structured YAML.

### Usage

```bash
cxc compile \
  -i <scenario.cradle> \
  -o <output.yml>
```

### Example

```bash
cxc compile \
  -i scenarios/HelloWorld.cradle \
  -o HelloWorld.yml
```

The input is the human-authored `.cradle` scenario.

The output is the compiled YAML representation produced by CradleXC.

### Common arguments

| Argument | Purpose |
| --- | --- |
| `-i` | Specifies the input `.cradle` file. |
| `-o` | Specifies the output YAML file. |

For more information, see [Validate and Compile](../getting-started/validate-and-compile).

---

## `cxc dump-ir`

Displays the intermediate representation produced by CradleXC.

### Usage

```bash
cxc dump-ir -i <scenario.cradle>
```

### Example

```bash
cxc dump-ir -i scenarios/HelloWorld.cradle
```

This command is useful when:

- inspecting how CradleXC interpreted a scenario
- diagnosing unexpected compiler output
- investigating compiler behavior
- developing or debugging backend integration

`cxc dump-ir` does not replace validation or compilation.

For more information, see [Inspect Output](../getting-started/inspect-output).

---

## `cxc build`

Generates target-specific files through a compatible backend plugin.

### Usage

```bash
cxc build \
  -i <scenario.cradle> \
  --target <plugin_name> \
  -o <output_directory>
```

### Example

```bash
cxc build \
  -i scenarios/HelloWorld.cradle \
  --target vagrant \
  -o ./output
```

### Arguments used in this workflow

| Argument | Purpose |
| --- | --- |
| `-i` | Specifies the input `.cradle` scenario. |
| `--target` | Selects the backend target. |
| `-o` | Specifies the output location. When omitted, the default is `./build_<target>`. |
| `--backend-arg key=value` | Passes a repeatable backend-specific option. |
| `--config-dir` | Overrides the configured content directory for `config()` entries. |
| `--heuristics-dir` | Overrides the configured content directory for instance heuristics. |

A compatible backend plugin must be available for the selected target.

When no backend plugin is registered, `build` and `rebuild` are hidden from the
top-level `cxc --help` command list, although direct invocation still reports
the normal target-discovery error.

:::important
`cxc build` generates target-specific files. CradleXC does not automatically execute those files.
:::

Use the generated files with the corresponding tools in your own testbed environment.

:::note
`cxc build` is a hard rename of `cxc emit`; there is no `emit` alias. The
rendering purpose and command options are otherwise the same. The default
output directory changed from `./emit_<target>` to `./build_<target>`, and the
render state files changed from `.cxc-deploy.json` and `.cxc-deploy-ir.json` to
`.cxc-build.json` and `.cxc-build-ir.json`.

Build state is refreshed after every successful render. A backend that exposes
stage commands can also make `cxc build` print suggested boot, provision and
event commands after generation; these are hints and are not run automatically.
:::

For backend installation and configuration, see [Use a Backend](../getting-started/use-a-backend).

---

## `cxc rebuild`

Compares the current scenario with the IR snapshot from the most recent
successful `cxc build` or `cxc rebuild`, then regenerates the backend's complete
file set in the same output directory.

### Usage

```bash
cxc rebuild \
  -i <scenario.cradle> \
  --target <plugin_name> \
  -o <existing_output_directory>
```

### Example

```bash
cxc rebuild \
  -i scenarios/HelloWorld.cradle \
  --target vagrant \
  -o ./output
```

The output directory must already exist and contain `.cxc-build-ir.json` from a
successful build. Output created by the former `cxc emit` state format is not a
valid baseline; run `cxc build` once to create current build state.

`cxc rebuild` reports every instance as added, removed, recreated,
reprovisioned or unchanged, with reasons for recreate and reprovision changes.
It then asks the backend to render the complete current file set. It is not a
partial file writer.

| Difference | Classification |
| --- | --- |
| Platform, OS version, architecture, CPU, memory, interfaces or router/Windows status | Recreate |
| Configs, objects, roles, routes or heuristic membership | Reprovision |
| Instance only in the current scenario | Added |
| Instance only in the previous build | Removed |
| No deployment-relevant change | Unchanged |

A pure reordering of the same heuristics is unchanged. Adding, removing or
replacing a heuristic is a reprovision change.

:::important
`cxc rebuild` only updates generated files. It does not create, change or remove
a live deployment. If network identity or addressing changed, it stops and asks
you to run `cxc build` into a fresh output directory instead.
:::

After a successful rebuild, compatible backends may print boot or provision
commands scoped to the affected instances. These are suggestions only and are
not executed by CradleXC.

---

## `cxc backend list`

Lists compatible backend plugins currently discovered by CradleXC.

### Usage

```bash
cxc backend list
```

Backend executables follow the naming convention:

```text
cxc-backend-<name>
```

CradleXC discovers compatible backend executables from:

```text
PATH
```

or:

```text
~/.cxc/plugins/
```

Use this command after installing a backend to confirm that CradleXC can discover it.

For more information, see [Backend Discovery](./backend-discovery).

---

## `cxc plugin install`

Installs a backend plugin.

### Usage

```bash
cxc plugin install <plugin_name>
```

### Example

```bash
cxc plugin install vagrant
```

After installation, check whether the backend is available:

```bash
cxc backend list
```

The exact plugin names available depend on the backend plugins published for CRADLE.

For more information, see [Use a Backend](../getting-started/use-a-backend).

---

## `cxc doctor`

Checks dependencies and the current CradleXC environment.

### Usage

```bash
cxc doctor
```

Use this command when:

- setting up CradleXC
- checking required dependencies
- diagnosing environment problems
- investigating backend-related dependency problems

If required dependencies are missing, use:

```bash
cxc install-deps
```

For troubleshooting guidance, see [Troubleshooting](../guides/troubleshooting).

---

## `cxc install-deps`

Displays dependency installation guidance.

### Usage

```bash
cxc install-deps
```

A typical dependency workflow is:

```bash
cxc doctor
cxc install-deps
cxc doctor
```

The first `cxc doctor` identifies dependency problems.

`cxc install-deps` provides installation guidance.

Run `cxc doctor` again after resolving the reported issues.

---

## `cxc config`

Displays the current CradleXC configuration.

### Usage

```bash
cxc config
```

Use this command when checking:

- local CradleXC settings
- configured paths
- repository-related configuration
- other CLI configuration values

Detailed configuration behavior is covered in [CLI Configuration](./configuration).

---

## Global help

Display the main CLI help:

```bash
cxc --help
```

Display the installed version:

```bash
cxc --version
```

For command-specific help:

```bash
cxc <command> --help
```

Examples:

```bash
cxc validate --help
```

```bash
cxc compile --help
```

```bash
cxc build --help
```

## Typical scenario workflow

For normal CRADLE scenario development:

```bash
cxc validate -i scenarios/HelloWorld.cradle
```

Then compile:

```bash
cxc compile \
  -i scenarios/HelloWorld.cradle \
  -o HelloWorld.yml
```

If you need to inspect the intermediate representation:

```bash
cxc dump-ir -i scenarios/HelloWorld.cradle
```

If target-specific files are required, confirm the backend:

```bash
cxc backend list
```

Then generate the files:

```bash
cxc build \
  -i scenarios/HelloWorld.cradle \
  --target <plugin_name> \
  -o ./output
```

The overall workflow is:

<div className="architecture-flow architecture-workflow">

  <div>CRADLE source</div>

  <span>↓</span>

  <div><code>cxc validate</code></div>

  <span>↓</span>

  <div><code>cxc compile</code></div>

  <span>↓</span>

  <div>Compiled representation</div>

  <span>↓</span>

  <div className="architecture-flow-step-backend"><code>cxc build</code></div>

  <span>↓</span>

  <div>Target-specific files</div>

</div>

## Command groups

### Scenario processing

<div className="cxc-command-grid">

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Validate CRADLE source syntax.
    </div>
    <code>cxc validate</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Compile CRADLE source into YAML.
    </div>
    <code>cxc compile</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Inspect the intermediate representation.
    </div>
    <code>cxc dump-ir</code>
  </div>

</div>

### Backend plugins

<div className="cxc-command-grid">

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      List discovered backend plugins.
    </div>
    <code>cxc backend list</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Install a backend plugin.
    </div>
    <code>cxc plugin install</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Generate target-specific files.
    </div>
    <code>cxc build</code>
  </div>

</div>

### Environment

<div className="cxc-command-grid">

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Check the current environment.
    </div>
    <code>cxc doctor</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Display dependency installation guidance.
    </div>
    <code>cxc install-deps</code>
  </div>

  <div className="cxc-command-card">
    <div className="cxc-command-description">
      Inspect CradleXC configuration.
    </div>
    <code>cxc config</code>
  </div>

</div>

## Related documentation

- [CLI Overview](./overview)
- [CLI Configuration](./configuration)
- [Backend Discovery](./backend-discovery)
- [CLI Outputs](./outputs)
- [Validate and Compile](../getting-started/validate-and-compile)
- [Inspect Output](../getting-started/inspect-output)
- [Use a Backend](../getting-started/use-a-backend)
- [Troubleshooting](../guides/troubleshooting)
